# template-rust-cli

./: Cargo.toml  README.md  biome.jsonc  package.json
.github/workflows/: release.yml  sync.yml  test.yml
misc/packaging/aur/omnidotdev-{{project-name}}/: PKGBUILD
misc/packaging/aur/omnidotdev-{{project-name}}-bin/: PKGBUILD
src/: main.rs
