[package]
name = "template-rust-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Omni <team@omni.dev>"]
description = "Rust CLI template"
license = "Apache-2.0"
repository = "https://github.com/omnidotdev/template-rust-cli"
homepage = "https://template-rust-cli.omni.dev"
keywords = []
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "template-rust-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"] }
